[gd_scene load_steps=3 format=3 uid="uid://dls4hygmbewm3"]

[ext_resource type="Script" uid="uid://dh56ggjtrltpj" path="res://PulangSandata/Army/UI/UnitCard.gd" id="1_qsqll"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qsqll"]
bg_color = Color(0.0463316, 0.0117038, 0.263788, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 20

[node name="UnitCard" type="Control"]
custom_minimum_size = Vector2(140, 115)
layout_mode = 3
anchors_preset = 0
offset_right = 140.0
offset_bottom = 115.0
mouse_filter = 1
script = ExtResource("1_qsqll")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 115)
layout_mode = 0
offset_right = 140.0
offset_bottom = 115.0
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qsqll")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(140, 115)
layout_mode = 0
offset_right = 140.0
offset_bottom = 115.0
size_flags_vertical = 3
mouse_filter = 2

[node name="UnitNameLabel" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.99672, 0.856416, 0.624943, 1)
horizontal_alignment = 1

[node name="UnitTypeLabel" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="UnitStatsLabel" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
